--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.5.1",
     "framer-motion": "^11.0.8",
-    "next": "13.5.6",
+    "next": "^13.5.6",
     "react": "^18",
     "react-dom": "^18",
     "react-toastify": "^10.0.4",
